--- a/languages/extend-search-block.pot
+++ b/languages/extend-search-block.pot
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Extend Search Block\n"
 "Report-Msgid-Bugs-To: https://support.webmandesign.eu\n"
-"POT-Creation-Date: 2023-03-15 13:27+0100\n"
+"POT-Creation-Date: 2023-03-16 12:06+0100\n"
 "PO-Revision-Date: 2015-05-12 20:39+0100\n"
 "Last-Translator: Oliver Juhas, WebMan Design\n"
 "Language-Team: WebMan Design\n"
@@ -20,245 +20,36 @@ msgstr ""
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "X-Poedit-SearchPath-0: .\n"
 
-#: includes/Block.php:59
-msgid "Action hook"
+#: blocks/search/dev/mods.js:90
+msgid "Search modifiers"
 msgstr ""
 
-#: includes/Block.php:60
-msgid "Executes a WordPress PHP action hook on front-end of the website."
-msgstr ""
-
-#: includes/Block.php:64
-msgctxt "Block search keyword. Theme Hook Alliance abbreviation."
-msgid "THA"
-msgstr ""
-
-#: includes/Block.php:65
-msgctxt "Block search keyword."
-msgid "theme"
-msgstr ""
-
-#: includes/Block.php:66
-msgctxt "Block search keyword."
-msgid "hook"
-msgstr ""
-
-#: includes/Block.php:67
-msgctxt "Block search keyword."
-msgid "alliance"
-msgstr ""
-
-#: includes/Block.php:68
-msgctxt "Block search keyword."
-msgid "action"
-msgstr ""
-
-#: includes/Block.php:69
-msgctxt "Block search keyword."
-msgid "PHP"
-msgstr ""
-
-#: includes/Hooks.php:41
-msgid "– Select an action hook –"
-msgstr ""
-
-#: includes/Options.php:113
-msgid "\"Action hook\" block options"
-msgstr ""
-
-#: includes/Options.php:117
-msgid "Options for \"Action hook\" block provided by Extend Search Block plugin."
-msgstr ""
-
-#: includes/Options.php:129
-msgid "Theme Hook Alliance hooks"
-msgstr ""
-
-#: includes/Options.php:137
-msgid "Custom hook names"
-msgstr ""
-
-#: includes/Options.php:245
-msgctxt "Plugin action link."
-msgid "Settings"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:128
-msgctxt "PHP action hook label."
-msgid "Comments: Before (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:129
-msgctxt "PHP action hook label."
-msgid "Comments: After (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:131
-msgctxt "PHP action hook label."
-msgid "Content: Before (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:132
-msgctxt "PHP action hook label."
-msgid "Content: Top (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:133
-msgctxt "PHP action hook label."
-msgid "Content: Bottom (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:134
-msgctxt "PHP action hook label."
-msgid "Content: After (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:136
-msgctxt "PHP action hook label."
-msgid "Query Loop: After (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:137
-msgctxt "PHP action hook label."
-msgid "Query Loop: Before (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:139
-msgctxt "PHP action hook label."
-msgid "Entry: Before (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:140
-msgctxt "PHP action hook label."
-msgid "Entry: Top (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:141
-msgctxt "PHP action hook label."
-msgid "Entry: Bottom (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:142
-msgctxt "PHP action hook label."
-msgid "Entry: After (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:144
-msgctxt "PHP action hook label."
-msgid "Entry Content: Before (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:145
-msgctxt "PHP action hook label."
-msgid "Entry Content: After (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:147
-msgctxt "PHP action hook label."
-msgid "Footer: Before (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:148
-msgctxt "PHP action hook label."
-msgid "Footer: Top (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:149
-msgctxt "PHP action hook label."
-msgid "Footer: Bottom (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:150
-msgctxt "PHP action hook label."
-msgid "Footer: After (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:152
-msgctxt "PHP action hook label."
-msgid "Header: Before (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:153
-msgctxt "PHP action hook label."
-msgid "Header: Top (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:154
-msgctxt "PHP action hook label."
-msgid "Header: Bottom (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:155
-msgctxt "PHP action hook label."
-msgid "Header: After (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:157
-msgctxt "PHP action hook label."
-msgid "Sidebar: Top (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:158
-msgctxt "PHP action hook label."
-msgid "Sidebar: Bottom (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:160
-msgctxt "PHP action hook label."
-msgid "Sidebars: Before (THA)"
-msgstr ""
-
-#: includes/Theme_Hook_Alliance.php:161
-msgctxt "PHP action hook label."
-msgid "Sidebars: After (THA)"
-msgstr ""
-
-#: includes/views/form-field-hooks_custom.php:19
-msgid "You can add your own custom action hooks to choose from."
-msgstr ""
-
-#. translators: %s: comma presented in HTML code.
-#: includes/views/form-field-hooks_custom.php:24
-#, php-format
+#: blocks/search/dev/mods.js:95
 msgid ""
-"Simply list your custom hook names below and separate them with comma (%s)."
+"Keep pressing CTRL (Windows) or CMD (Mac) key while selecting or deselecting "
+"item(s) in the fields below."
 msgstr ""
 
-#: includes/views/form-field-hooks_custom.php:33
-msgid "Action hook names separated with comma:"
+#: blocks/search/dev/mods.js:102
+msgid "Post type"
 msgstr ""
 
-#: includes/views/form-field-hooks_tha.php:19
+#: blocks/search/dev/mods.js:103
+msgid "Narrows search results to selected post type(s) only."
+msgstr ""
+
+#: blocks/search/dev/mods.js:114
+msgid "Taxonomy"
+msgstr ""
+
+#: blocks/search/dev/mods.js:115
 msgid ""
-"By default, plugin allows you to select Theme Hook Alliance action hooks in "
-"the block."
+"Adds selected taxonomy dropdown to the search form on the front-end of your "
+"website."
 msgstr ""
 
-#: includes/views/form-field-hooks_tha.php:20
-msgid "Theme Hook Alliance info →"
-msgstr ""
-
-#: includes/views/form-field-hooks_tha.php:31
-msgid "Enable Theme Hook Alliance action hooks"
-msgstr ""
-
-#: blocks/action-hook/dev/block.js:26
-msgid "Executing this PHP code here:"
-msgstr ""
-
-#: blocks/action-hook/dev/block.js:26
-msgid "Select a hook to execute here."
-msgstr ""
-
-#: blocks/action-hook/dev/block.js:47
-msgid "Hook name"
-msgstr ""
-
-#: blocks/action-hook/dev/block.js:55
-msgid "Optional context"
-msgstr ""
-
-#: blocks/action-hook/dev/block.js:56
+#: blocks/search/dev/mods.js:115
 msgid ""
-"Context value will be passed into the action hook as an additional argument."
+"User will be able to narrow down the search results to specific taxonomy term "
+"only."
 msgstr ""
